--- a/Instructions/instructions.html
+++ b/Instructions/instructions.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brain-Battle-Instuctions</title>
+    <link rel="stylesheet" href="instructions.css">
 </head>
 <body>
     
