--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brain Battle</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -14,5 +15,6 @@
         <h1>Welcome to Brain Battle</h1>
         <h3>A Two-Player Trivia Quiz Game</h3>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
