Home-page set-up

--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
         </div>
         <h1>Welcome to Brain Battle</h1>
         <h3>A Two-Player Trivia Quiz Game</h3>
+        <div class="player-container">
+            <div class="player1-div">
+                <img src="assets/person1.png" alt="">
+                <input type="text" id="player1-name" placeholder="Enter Player 1 Name" required>
+            </div>
+            <div class="vs-icon">
+                <img src="assets/Lightning-bolt-icon.png" alt="">
+            </div>
+            <div class="player2-div">
+                <img src="assets/person2.png" alt="">
+                <input type="text" id="player2-name" placeholder="Enter Player 2 Name" required>
+            </div>
+            <div class="next-btn-div">
+                <button id="next-btn">Start Game</button>
+            </div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
