--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <div class="home-page">
+    <div id="home-page" class="page">
         <div class="instructions-div">
             <a href="/Instructions/instructions.html"><i class="fa fa-book" aria-hidden="true"></i> Read Instructions</a>
         </div>
