added class name and alternative name for images

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <h3>A Two-Player Trivia Quiz Game</h3>
         <div class="player-container">
             <div class="player1-div">
-                <img src="assets/person1.png" alt="">
+                <img src="assets/person1.png" alt="Person-1-icon" class="player-icon image">
                 <input type="text" id="player1-name" placeholder="Enter Player 1 Name" required>
             </div>
             <div class="vs-icon">
-                <img src="assets/Lightning-bolt-icon.png" alt="">
+                <img src="assets/Lightning-bolt-icon.png" alt="verseus-icon" class="image">
             </div>
             <div class="player2-div">
-                <img src="assets/person2.png" alt="">
+                <img src="assets/person2.png" alt="Person-2-icon" class="player-icon image">
                 <input type="text" id="player2-name" placeholder="Enter Player 2 Name" required>
             </div>
         </div>
