changed button element cotent

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <input type="text" id="player1-name" placeholder="Enter Player 1 Name" required>
             </div>
             <div class="vs-icon">
-                <img src="assets/Lightning-bolt-icon.png" alt="verseus-icon" class="image">
+                <img src="assets/Lightning-bolt-icon.png" alt="verseus-icon" class="image" id="versus-icon">
             </div>
             <div class="player2-div">
                 <img src="assets/person2.png" alt="Person-2-icon" class="player-icon image">
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="next-btn-div">
-            <button id="next-btn">Start Game</button>
+            <button id="next-btn">Next <i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
         </div>
     </div>
     <script src="script.js"></script>
