added category page elements

--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
             <button id="next-btn">Next <i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
         </div>
     </div>
+
+    <div class="category-page">
+        <h2>Choose a Category</h2>
+        <div class="categories-div">
+            <!--Categories will be loaded dynamically using JS-->
+        </div>
+        <button id="start-btn">Start Quiz</button>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
