--- a/index.html
+++ b/index.html
@@ -28,18 +28,55 @@
             </div>
         </div>
         <div class="next-btn-div">
-            <button id="next-btn">Next <i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
+            <button id="next-btn" disabled>Next <i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
         </div>
     </div>
 
     <div class="category-page">
         <h2>Choose a Category</h2>
-        <div class="categories-div">
+        <div id="categories-div">
             <!--Categories will be loaded dynamically using JS-->
         </div>
-        <button id="start-btn">Start Quiz</button>
+        <button id="start-btn" disabled>Start Quiz</button>
     </div>
 
+    <div class="quiz-page">
+        <div class="score-bar">
+            <div class="player-score-bar" id="player1-score-bar">
+                <p id="player1-name"></p>
+                <div id="p1-easy" class="bar"></div>
+                <div id="p1-medium" class="bar"></div>
+                <div id="p1-hard" class="bar"></div>
+            </div>
+            <div class="stars-bar">
+                <div id="star-1" class="stars"><i class="fa-solid fa-star"></i></div>
+                <div id="star-2" class="stars"><i class="fa-solid fa-star"></i>&nbsp;&nbsp;<i class="fa-solid fa-star"></i></div>
+                <div id="star-3" class="stars"><i class="fa-solid fa-star">&nbsp;&nbsp;<i class="fa-solid fa-star"></i></i>&nbsp;&nbsp;<i class="fa-solid fa-star"></i></i></div>
+            </div>
+            <div class="player-score-bar"  id="player1-score-bar">
+                <p id="player1-name"></p>
+                <div id="p2-easy" class="bar"></div>
+                <div id="p2-medium" class="bar"></div>
+                <div id="p3-hard" class="bar"></div>
+            </div>
+        </div>
+        <div class="question-div">
+            <div class="q-info-div">
+                <p id="question-for">Question for <span id="current-player"></span><p>
+                <p>Category - <span id="current-category"></span></p>
+                <p>Level - <span id="current-level"></span></p>
+            </div>
+            <div class="quiz-question-display">
+                <p id="question-text">
+                    <!--question will be loaded-->
+                </p>
+                <div class="options-div" id="answer-buttons">
+                    <!--options will be loaded-->
+                </div>
+            </div>
+        </div>
+        <button id="next-question"><i class="fa-solid fa-angle-right"></i><i class="fa-solid fa-angle-right"></i></button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
