--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+    <!--Home-page-->
     <div id="home-page" class="page">
         <div class="instructions-div">
             <a href="/Instructions/instructions.html"><i class="fa fa-book" aria-hidden="true"></i> Read Instructions</a>
@@ -32,7 +33,8 @@
         </div>
     </div>
 
-    <div class="category-page">
+    <!--Category Page-->
+    <div id="category-page" class="hidden">
         <h2>Choose a Category</h2>
         <div id="categories-div">
             <!--Categories will be loaded dynamically using JS-->
@@ -40,7 +42,8 @@
         <button id="start-btn" disabled>Start Quiz</button>
     </div>
 
-    <div class="quiz-page">
+    <!--Quiz Page-->
+    <div id="quiz-page" class="hidden">
         <div class="score-bar">
             <div class="player-score-bar" id="player1-score-bar">
                 <p id="player1-name"></p>
@@ -76,6 +79,26 @@
             </div>
         </div>
         <button id="next-question"><i class="fa-solid fa-angle-right"></i><i class="fa-solid fa-angle-right"></i></button>
+    </div>
+
+    <!--Results Page-->
+    <div id="results-page" class="hidden">
+        <div>
+            <a href="/index.html"><i class="fa fa-home" aria-hidden="true"></i>Home Page</a>
+        </div>
+        <h2>Bravo! <span id="winner-name"></span> nile the quiz !</h2>
+        <h3 id="score-board-heading">Score board</h3>
+        <div class="score-board">
+            <div id="row1">
+                <div><span id="player1-name"></span></div>
+                <div><span id="player1-score"></span></div>
+            </div>
+            <div id="row2">
+                <div><span id="player2-name"></span></div>
+                <div><span id="player2-score"></span></div>
+            </div>
+        </div>
+        <h3 id="thanks-note">Thank you for playing! Grat efforts!</h3>
     </div>
     <script src="script.js"></script>
 </body>
