Added post-questions page elements

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div>
             <a href="/index.html"><i class="fa fa-home" aria-hidden="true"></i>Home Page</a>
         </div>
-        <h2>Bravo! <span id="winner-name"></span> nile the quiz !</h2>
+        <h2>Bravo! <span id="winner-name"></span> nailed the quiz !</h2>
         <h3 id="score-board-heading">Score board</h3>
         <div class="score-board">
             <div id="row1">
@@ -100,6 +100,24 @@
         </div>
         <h3 id="thanks-note">Thank you for playing! Grat efforts!</h3>
     </div>
+
+    <!--post-questions-page-->
+    <div id="-post-questions-page-" class="hidden">
+        <div class="current-score-board">
+            <p><span id="current-winner"></span> is leading the Quiz! But you can still choose another category or end the game!</p>
+            <div class="curr-score-board">
+                <p id="curr-player1-score"><span id="player1-current-score"></span></p>
+                <p id="curr-player2-score"><span id="player2-current-score"></span></p>
+            </div>
+        </div>
+        <div class="btn-div">
+            <button id="choose-another-category">Choose Another Category</button>
+            <button id="end-the-game">End the Game</button>
+        </div>
+        <p>We're glad you played this far!</p>
+        <p><i class="fa-solid fa-heart"></i></p>
+    </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
