added a paragraph element for error message

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
             </div>
         </div>
         <div class="next-btn-div">
-            <button id="next-btn" disabled>Next <i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
+            <button id="next-btn">Next <i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
         </div>
+        <p id="error-message"></p>
     </div>
 
     <!--Category Page-->
@@ -102,7 +103,7 @@
     </div>
 
     <!--post-questions-page-->
-    <div id="-post-questions-page-" class="hidden">
+    <div id="post-questions-page" class="hidden">
         <div class="current-score-board">
             <p><span id="current-winner"></span> is leading the Quiz! But you can still choose another category or end the game!</p>
             <div class="curr-score-board">
@@ -117,7 +118,7 @@
         <p>We're glad you played this far!</p>
         <p><i class="fa-solid fa-heart"></i></p>
     </div>
-    
+
     <script src="script.js"></script>
 </body>
 </html>
