--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <input type="text" id="player1-name" placeholder="Enter Player 1 Name" required>
             </div>
             <div class="vs-icon">
-                <img src="assets/Lightning-bolt-icon.png" alt="verseus-icon" class="image" id="versus-icon">
+                <img src="assets/Lightning-bolt-icon.png" alt="versus-icon" class="image" id="versus-icon">
             </div>
             <div class="player2-div">
                 <img src="assets/person2.png" alt="Person-2-icon" class="player-icon image">
@@ -36,7 +36,7 @@
 
     <!--Category Page-->
     <div id="category-page" class="hidden">
-        <h2>Choose a Category</h2>
+        <h2 id="category-page-heading">Choose a Category</h2>
         <div id="categories-div">
             <!--Categories will be loaded dynamically using JS-->
         </div>
