--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div id="quiz-page" class="hidden">
         <div class="score-bar">
             <div class="player-score-bar" id="player1-score-bar">
-                <p id="player1-name"></p>
+                <p id="player1-name-para"></p>
                 <div id="p1-easy" class="bar"></div>
                 <div id="p1-medium" class="bar"></div>
                 <div id="p1-hard" class="bar"></div>
@@ -58,7 +58,7 @@
                 <div id="star-3" class="stars"><i class="fa-solid fa-star">&nbsp;&nbsp;<i class="fa-solid fa-star"></i></i>&nbsp;&nbsp;<i class="fa-solid fa-star"></i></i></div>
             </div>
             <div class="player-score-bar"  id="player1-score-bar">
-                <p id="player2-name"></p>
+                <p id="player2-name-para"></p>
                 <div id="p2-easy" class="bar"></div>
                 <div id="p2-medium" class="bar"></div>
                 <div id="p2-hard" class="bar"></div>
