--- a/index.html
+++ b/index.html
@@ -84,31 +84,31 @@
 
     <!--Results Page-->
     <div id="results-page" class="hidden">
-        <div>
-            <a href="/index.html"><i class="fa fa-home" aria-hidden="true"></i>Home Page</a>
+        <div id="goto-home-page">
+            <a href="/index.html"><i class="fa fa-home" aria-hidden="true"></i> Home Page</a>
         </div>
         <h2>Bravo! <span id="winner-name"></span> nailed the quiz !</h2>
         <h3 id="score-board-heading">Score board</h3>
         <div class="score-board">
             <div id="row1">
-                <div><span id="player1-name"></span></div>
+                <div><span id="player1-name-span"></span></div>
                 <div><span id="player1-score"></span></div>
             </div>
             <div id="row2">
-                <div><span id="player2-name"></span></div>
+                <div><span id="player2-name-span"></span></div>
                 <div><span id="player2-score"></span></div>
             </div>
         </div>
-        <h3 id="thanks-note">Thank you for playing! Grat efforts!</h3>
+        <h3 id="thanks-note">Thank you for playing! Great efforts!</h3>
     </div>
 
     <!--post-questions-page-->
     <div id="post-questions-page" class="hidden">
         <div class="current-score-board">
-            <p><span id="current-winner"></span> is leading the Quiz! But you can still choose another category or end the game!</p>
+            <p><span id="current-winner"></span> is winner of this Quiz! But you can still choose another category or end the game!</p>
             <div class="curr-score-board">
-                <p id="curr-player1-score"><span id="player1-current-score"></span></p>
-                <p id="curr-player2-score"><span id="player2-current-score"></span></p>
+                <p id="curr-player1-score"><span id='p1-name'></span>&nbsp;&nbsp;:&nbsp;&nbsp;<span id="player1-current-score"></span></p>
+                <p id="curr-player2-score"><span id='p2-name'></span>&nbsp;&nbsp;:&nbsp;&nbsp;<span id="player2-current-score"></span></p>
             </div>
         </div>
         <div class="btn-div">
