Added id to winner message content

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div id="goto-home-page">
             <a href="/index.html"><i class="fa fa-home" aria-hidden="true"></i> Home Page</a>
         </div>
-        <h2>Bravo! <span id="winner-name"></span> nailed the quiz !</h2>
+        <h2 id="message">Bravo! <span id="winner-name"></span> nailed the quiz !</h2>
         <h3 id="score-board-heading">Score board</h3>
         <div class="score-board">
             <div id="row1">
@@ -105,7 +105,7 @@
     <!--post-questions-page-->
     <div id="post-questions-page" class="hidden">
         <div class="current-score-board">
-            <p><span id="current-winner"></span> is winner of this Quiz! But you can still choose another category or end the game!</p>
+            <p id="winner-message"><span id="current-winner"></span> is winner of this Quiz! But you can still choose another category or end the game!</p>
             <div class="curr-score-board">
                 <p id="curr-player1-score"><span id='p1-name'></span>&nbsp;&nbsp;:&nbsp;&nbsp;<span id="player1-current-score"></span></p>
                 <p id="curr-player2-score"><span id='p2-name'></span>&nbsp;&nbsp;:&nbsp;&nbsp;<span id="player2-current-score"></span></p>
