changed score board spelling

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <a href="/index.html"><i class="fa fa-home" aria-hidden="true"></i> Home Page</a>
         </div>
         <h2 id="message">Bravo! <span id="winner-name"></span> nailed the quiz !</h2>
-        <h3 id="score-board-heading">Score board</h3>
+        <h3 id="score-board-heading">Score Board</h3>
         <div class="score-board">
             <div id="row1">
                 <div><span id="player1-name-span"></span></div>
