--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <!--post-questions-page-->
     <div id="post-questions-page" class="hidden">
         <div class="current-score-board">
-            <p id="winner-message"><span id="current-winner"></span> is winner of this Quiz! But you can still choose another category or end the game!</p>
+            <p id="winner-message"><span id="current-winner"></span> is winner of this Quiz!<br>But you can still choose another category or end the game!</p>
             <div class="curr-score-board">
                 <p id="curr-player1-score"><span id='p1-name'></span>&nbsp;&nbsp;:&nbsp;&nbsp;<span id="player1-current-score"></span></p>
                 <p id="curr-player2-score"><span id='p2-name'></span>&nbsp;&nbsp;:&nbsp;&nbsp;<span id="player2-current-score"></span></p>
